chore: fixed active icon color in dark mode

--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.scss
@@ -220,7 +220,7 @@
 }
 
 .enable-option {
-  top: 53%;
+  top: 54%;
   position: fixed;
   text-align: right!important;
   display: inline-block;
