--- a/packages/desktop-app/src/assets/scss/dark-theme.scss
+++ b/packages/desktop-app/src/assets/scss/dark-theme.scss
@@ -518,3 +518,8 @@ body.dark-theme {
     border-color: #404040!important;
   }
 }
+
+.selected i.fa-circle.active {
+  color: #64D1B9 !important;
+}
+
